// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user1 connects user1 added to story1 Broadcasts the correct changes to user1 1`] = `
Object {
  "createdAt": "2020-02-01T00:04:00.000Z",
  "id": "1",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:03:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 2,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 Broadcasts the correct changes to user2 1`] = `
Object {
  "createdAt": "2020-02-01T00:08:00.000Z",
  "id": "3",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:01:00.000Z",
        "dateModified": "2020-02-01T00:01:00.000Z",
        "id": "user1",
        "name": null,
        "version": 0,
      },
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:06:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 3,
  },
  "type": "STORY_CHANGED",
}
`;

exports[`user1 connects user1 added to story1 user2 connects user2 added to story1 user1 disconnects Broadcasts the correct changes to user2 1`] = `
Object {
  "createdAt": "2020-02-01T00:11:00.000Z",
  "id": "4",
  "payload": Object {
    "activeSession": null,
    "activeUsers": Array [],
    "connectedUsers": Array [
      Object {
        "dateAdded": "2020-02-01T00:05:00.000Z",
        "dateModified": "2020-02-01T00:05:00.000Z",
        "id": "user2",
        "name": null,
        "version": 0,
      },
    ],
    "dateCreated": "2020-02-01T00:02:00.000Z",
    "dateModified": "2020-02-01T00:10:00.000Z",
    "id": "story1",
    "lastSession": null,
    "version": 5,
  },
  "type": "STORY_CHANGED",
}
`;
